tests/baselines/reference/declFileExportImportChain.errors.txt
declFileExportImportChain_a.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
declFileExportImportChain_a.ts(2,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== declFileExportImportChain_d.ts (0 errors) ====
    import c = require("declFileExportImportChain_c");
    export var x: c.b1.a.m2.c1;
==== declFileExportImportChain_a.ts (2 errors) ====
    module m1 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module m2 {
                      ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export class c1 {
            }
        }
    }
    export = m1;
    
==== declFileExportImportChain_b.ts (0 errors) ====
    export import a = require("declFileExportImportChain_a");
    
==== declFileExportImportChain_b1.ts (0 errors) ====
    import b = require("declFileExportImportChain_b");
    export = b;
    
==== declFileExportImportChain_c.ts (0 errors) ====
    export import b1 = require("declFileExportImportChain_b1");
    